<resources>
    <string name="app_name">nhom_10</string>
    <string name="nhapTenBan">Nhập tên bàn</string>
    <string name="nhapTenLoaiMon">Nhập tên loại món</string>
    <string name="add">Thêm</string>
    <string name="soBan">Bàn số 01</string>
    <string name="ThayDoi">Thay đổi</string>
    <string name="cancel">Huỷ</string>
    <string name="taikhoan">Tài khoản</string>
    <string name="dangnhap">ĐĂNG NHẬP</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="hienmatkhau">Hiện mật khẩu</string>
    <string name="quenmatkhau">Quên mật khẩu</string>
    <string name="btdangnhap">Đăng nhập</string>
    <string name="loinhan">Chúng tôi sẽ gửi link đổi mật khẩu vào Email của bạn.</string>
    <string name="nhapmail">Nhập email</string>
    <string name="email">Email</string>
    <string name="huy">Hủy</string>
    <string name="gui">Gửi</string>
    <string name="datmon">Đặt món</string>
    <string name="lich">Lịch làm việc</string>
    <string name="dangxuat">Đăng xuất</string>

    <string name="xemhoadon">Xem hóa đơn</string>
    <string name="xuatkho">Xuất kho</string>
    <string name="thanhtoan">Thanh toán</string>
    <string name="thuchi">Thu chi</string>

    <string name="quanly">Quản Lý</string>
    <string name="quanlybanhang">Quản lý bán hàng</string>
    <string name="nhapxuatkho">Nhập xuất kho</string>
    <string name="baocao">Báo cáo</string>


    <string name="open_navigation_drawer">open_navigation_drawer</string>
    <string name="close_navigation_drawer">close_navigation_drawer</string>

    <string name="tenMon">Tên món</string>
    <string name="loaiMon">Loai món</string>
    <string name="gia">Giá:</string>
    <string name="moTa">Mô tả</string>
    <string name="hoTen">Họ tên: </string>
    <string name="tong">Tổng: </string>
    <string name="thanhToan">Thanh Toán</string>
    <string name="nhapMaGiamGia">Chọn mã giảm giá</string>
    <string name="search">search</string>
    <string name="tenBan">Tên bàn</string>
    <string name="dat">Đặt</string>
    <string name="soLuong">Số Lượng: </string>
    <string name="xong">Xong</string>
    <string name="themMon">Thêm Món</string>

    <string name="quanLyBan">Quản Lý Bàn</string>
    <string name="quanLyMon">Quản Lý Món</string>
    <string name="quanLyLoaiMon">Quản Lý Loại Món</string>
    <string name="quanLyNhanVien">Quản Lý Nhân Viên</string>
    <string name="quanLyLichLamViec">Quản Lý Lịch Làm Việc</string>
    <string name="Them">Thêm</string>
    <string name="Xoa">Xoá</string>
    <string name="Sua">Sửa</string>
    <string name="HienThi">Hiển Thị</string>
    <string name="Thoat">Thoát</string>
    <string name="NhapTieuDe">Quản lý nhân viên</string>
    <string name="NhapTen">Nhập tên</string>
    <string name="Timkiem">Search</string>
    <string name="DanhSach">Danh Sách</string>
    <string name="MaGiamGia">Mã Giảm Giá</string>
    <string name="nguyenlieu">Nguyên liệu</string>
    <string name="nhapkho">Nhập kho</string>
    <string name="ten_nl">Tên</string>
    <string name="gia_nl">Giá</string>
    <string name="don_vi">Đơn vị</string>
    <string name="ten_NL">Tên nguyên liệu</string>
    <string name="mota">Mô tả</string>
    <string name="kiemkekho">Kiểm kê kho</string>
    <string name="ngaybatdau">Ngày bắt đầu : 01/01/2021</string>
    <string name="thu">Thu</string>
    <string name="chi">Chi</string>
    <string name="sotien">Số tiền</string>
    <string name="loai">Loại : </string>
    <string name="hoatdongtrongngay">Hoạt động trong ngày</string>
    <string name="tinhhinhkinhdoanh">Tình hình kinh doanh</string>
    <string name="doanhthu">Doanh thu</string>
    <array name="donvi">
        <item>Kg</item>
        <item>Lít</item>
    </array>
</resources>