<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/layout">

    <Button
        android:id="@+id/btnQuanLyBan"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/quanLyBan"
        style="@style/button"/>
    <Button
        android:id="@+id/btnQuanLyMon"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/quanLyMon"
        style="@style/button"/>
    <Button
        android:id="@+id/btnQuanLyLoaiMon"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/quanLyLoaiMon"
        style="@style/button"/>
    <Button
        android:id="@+id/btnQuanLyNhanVien"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/quanLyNhanVien"
        style="@style/button"/>
    <Button
        android:id="@+id/btnQuanLyLichLamViec"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/quanLyLichLamViec"
        style="@style/button"/>

</LinearLayout>