<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/layout"
    tools:context="MainBan">
    <EditText
        android:id="@+id/edtNhapTenBan"
        android:layout_width="match_parent"
        android:hint="@string/nhapTenBan"
        android:inputType="number"
        style="@style/editText"
        />
    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:text="@string/add"
        style="@style/addButton"/>

    <LinearLayout
        android:id="@+id/Layout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnThayDoi"
            android:layout_width="match_parent"
            android:text="@string/ThayDoi"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            style="@style/editButton"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:text="@string/cancel"
            android:layout_weight="2"
            style="@style/cancelButton"/>

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lvBan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

</LinearLayout>