<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnNguyenLieu"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/nguyenlieu"
        style="@style/button"/>
    <Button
        android:id="@+id/btnNhapkho"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/nhapkho"
        style="@style/button"/>
    <Button
        android:id="@+id/btnXuatkho"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/xuatkho"
        style="@style/button"/>

</LinearLayout>