<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <Button
        android:id="@+id/btnHoatDongTrongNgay"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hoatdongtrongngay"
        style="@style/button"/>
    <Button
        android:id="@+id/btnTinhHinhKinhDoanh"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/tinhhinhkinhdoanh"
        style="@style/button"/>
    <Button
        android:id="@+id/btnDoanhThu"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/doanhthu"
        style="@style/button"/>

</LinearLayout>