<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChiTietThuChi">

    <tdc.edu.vn.nhom_10.CustomView.CustomActionBar
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ten_NL"/>
        <TextView
            android:id="@+id/tvTenNguoiNhap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ten_NL"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loai"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rdThu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="70dp"
                    android:text="@string/thu"/>
                <RadioButton
                    android:id="@+id/rdChi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chi"/>
            </RadioGroup>
        </LinearLayout>
        <EditText
            android:id="@+id/edSoTien"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="15dp"
            android:inputType="number"
            android:hint="@string/sotien"
            android:background="@drawable/boder"/>
        <EditText
            android:id="@+id/edMoTa"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:paddingLeft="10dp"
            android:textSize="15dp"
            android:layout_marginTop="10dp"
            android:hint="@string/moTa"
            android:gravity="top"
            android:background="@drawable/boder"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="9"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="3">
                <Button
                    android:id="@+id/btnHuy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/cancelButton"
                    android:textSize="15dp"
                    android:layout_gravity="right"
                    android:text="@string/huy"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="3">
                <Button
                    android:id="@+id/btnXoa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/deleteButton"
                    android:layout_gravity="right"
                    android:textSize="15dp"
                    android:text="@string/Xoa"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="3">
                <Button
                    android:id="@+id/btnThayDoi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/editButton"
                    android:textSize="15dp"
                    android:layout_gravity="right"
                    android:text="@string/ThayDoi"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>