<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context=".QuanLyBan">

    <tdc.edu.vn.nhom_10.CustomView.CustomActionBar
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout style="@style/layout">

        <EditText
            android:id="@+id/edtNhapTenBan"
            style="@style/editText"
            android:layout_width="match_parent"
            android:hint="@string/nhapTenBan"
            android:inputType="number" />

        <Button
            android:id="@+id/btnAdd"
            style="@style/addButton"
            android:layout_width="match_parent"
            android:text="@string/add" />

        <LinearLayout
            android:id="@+id/Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/btnThayDoi"
                style="@style/editButton"
                android:layout_width="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/ThayDoi" />

            <Button
                android:id="@+id/btnCancel"
                style="@style/cancelButton"
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:text="@string/cancel" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lvBan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>
</LinearLayout>