<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layout"
    android:weightSum="14"
    tools:context=".DonHangCuaBan">
    <LinearLayout
        android:weightSum="10"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="Suspicious0dp">
    <TextView
        android:id="@+id/tvTenBan"
        android:layout_weight="10"
        android:gravity="center"
        android:layout_width="0dp"
        style="@style/title"
        android:text="@string/tenBan"/>
        <ImageButton
            android:id="@+id/btnThemMon"
            style="@style/iconButton"
            android:background="@drawable/add"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lvDanhSachMon"
        android:layout_weight="12"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
    <LinearLayout
        android:layout_weight="1"
        android:weightSum="10"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvTong"
            android:layout_weight="8"
            android:layout_width="0dp"
            style="@style/title"
            android:text="@string/tong"/>
        <Button
            android:id="@+id/btnDat"
            android:layout_weight="2"
            android:layout_width="0dp"
            style="@style/addButton"
            android:text="@string/dat"/>
    </LinearLayout>
</LinearLayout>