<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context=".QuanLyLoaiMon">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/spacing4"
            android:weightSum="15">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing4"
                android:layout_weight="2"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnBack"
                    android:layout_width="@dimen/smallIconSize"
                    android:layout_height="@dimen/smallIconSize"
                    android:background="@drawable/back" />
            </LinearLayout>

            <TextView
                style="@style/textBar"
                android:layout_width="0dp"
                android:layout_weight="13"
                android:text="Quản lý bàn" />
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout style="@style/layout">

        <EditText
            android:id="@+id/edtNhapTenLoaiMon"
            style="@style/editText"
            android:layout_width="match_parent"
            android:digits="abcdefghijklmnopqrstuvwxyz0123456789ZXCVBNMASDFGHJKLQWERTYUIOP "
            android:hint="@string/nhapTenLoaiMon"
            android:inputType="text" />

        <Button
            android:id="@+id/btnAdd"
            style="@style/addButton"
            android:layout_width="match_parent"
            android:text="@string/add" />

        <LinearLayout
            android:id="@+id/Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/btnThayDoi"
                style="@style/editButton"
                android:layout_width="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/ThayDoi" />

            <Button
                android:id="@+id/btnCancel"
                style="@style/cancelButton"
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:text="@string/cancel" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lvLoaiMon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>
</LinearLayout>